# game-engine

./: CMakeLists.txt  README.MD  main.cpp
engine/: Engine.h
engine/components/: CameraComponent.cpp  CameraComponent.hpp  ModelComponent.h  RigidBodyComponent.hpp  TransformComponent.cpp  TransformComponent.h
engine/core/: CommandQueue.cpp  CommandQueue.h  ComponentPool.h  EntityPool.cpp  EntityPool.h  EntitySparseSet.cpp  EntitySparseSet.h  InputManager.cpp  InputManager.h  Material.h  MaterialManager.cpp  MaterialManager.h  MeshData.h  MeshManager.cpp  MeshManager.h  Renderer.cpp  Renderer.h  Systems.h  Types.h  Vertex.h  View2.h  World.cpp  World.h
engine/editor/: EntitiesPanel.cpp  EntitiesPanel.h  PropertiesPanel.cpp  PropertiesPanel.h
engine/entry/: App.cpp  App.h  Editor.cpp  Editor.h
engine/interfaces/: IComponent.h
engine/platform/: Window.cpp  Window.h
game/: test.cpp
models/: Cube.fbx  Plane.fbx
shaders/color/: fs_color.sc  vs_color.sc
shaders/coordinate_plane/: fs_coordinate_plane.sc  varying.def.sc  vs_coordinate_plane.sc
